# kml-converter

./: .gitignore  main.py  pyproject.toml
src/core/: dto.py
src/core/converter/: __init__.py  _enums.py
src/core/converter/gpx/: service.py
src/core/converter/kml/: service.py
src/core/documents/: csv_maker.py  excel_maker.py  utils.py
src/web/: app.py
src/web/api/v1/: __init__.py  _router.py
src/web/api/v1/converter/: _router.py  gpx.py  kml.py
src/web/frontend/: _router.py
src/web/frontend/static/: index.js
src/web/frontend/templates/: index.html
tests/resources/: data.gpx  data.kml
